kube-deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: pi_backend
        ports:
        - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 1234
  selector:
    app: backend
