kube-deployments/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: <YOUR_DOMAIN>
    http:
      paths:
      - path: /ui/
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 4200
      - path: /share
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 1234
      - path: /session/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 1234
